--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Maze Solver</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script type="importmap">
         {
@@ -13,32 +14,6 @@
             }
         }
     </script>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 20px;
-            padding: 20px;
-        }
-
-        #controls {
-            margin-bottom: 20px;
-        }
-
-        #mazeContainer {
-            width: 60%;
-            height: 500px;
-            border: 1px solid #ccc;
-        }
-
-        @media (max-width: 768px) {
-            #mazeContainer {
-                width: 100%;
-                height: 300px;
-            }
-        }
-    </style>
 
     <script type="module">
         import * as THREE from 'three';
